# scraper-base-lambda

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
scripts/: setup-environment.ps1
src/: main.py
src/utils/: utils.py
tests/: test_base.py
